[gd_scene load_steps=7 format=2]

[ext_resource path="res://Background/background.png" type="Texture" id=1]
[ext_resource path="res://Scenes/SummaryReport/Panel3.gd" type="Script" id=2]
[ext_resource path="res://Images/bg1.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/left.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 4 )

[node name="StudentNode" type="Node"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 290.722, 511.707 )
texture = ExtResource( 1 )

[node name="Panel3" type="Panel" parent="."]
margin_top = 40.0
margin_right = 535.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Board3" type="Sprite" parent="Panel3"]
position = Vector2( 306.098, 490.981 )
scale = Vector2( 0.588, 0.587 )
texture = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel3/Board3"]
margin_left = -421.0
margin_top = -598.0
margin_right = 393.0
margin_bottom = 551.0

[node name="list3" type="VBoxContainer" parent="Panel3/Board3/ScrollContainer"]

[node name="HTTPRequest" type="HTTPRequest" parent="Panel3"]

[node name="HTTPRequest2" type="HTTPRequest" parent="Panel3"]

[node name="Label" type="Label" parent="."]
margin_left = 22.035
margin_top = 90.282
margin_right = 356.035
margin_bottom = 150.282
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "StudentName"

[node name="BButton" type="Sprite" parent="."]
position = Vector2( 67.671, 57.499 )
scale = Vector2( 0.131, 0.089 )
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="BButton"]
margin_left = -316.0
margin_top = -406.0
margin_right = 335.0
margin_bottom = 355.0
flat = true
[connection signal="request_completed" from="Panel3/HTTPRequest" to="Panel3" method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="Panel3/HTTPRequest2" to="Panel3" method="_on_HTTPRequest2_request_completed"]
[connection signal="pressed" from="BButton/Button" to="Panel3" method="_on_Button_pressed"]
